# serverless-ml-cold-starts

./: .gitignore  Dockerfile  README.md  pyproject.toml  zappa_settings.json
analysis/: lambda_performance.ipynb  locustfile.py  modelling.ipynb
analysis/locust_logs/: DOCKER_DISK_TEST_ROUND_10_locust_logs.txt  DOCKER_DISK_TEST_ROUND_10_locust_report.html  DOCKER_DISK_TEST_ROUND_11_locust_logs.txt  DOCKER_DISK_TEST_ROUND_11_locust_report.html  DOCKER_DISK_TEST_ROUND_12_locust_logs.txt  DOCKER_DISK_TEST_ROUND_12_locust_report.html  DOCKER_DISK_TEST_ROUND_13_locust_logs.txt  DOCKER_DISK_TEST_ROUND_13_locust_report.html  DOCKER_DISK_TEST_ROUND_14_locust_logs.txt  DOCKER_DISK_TEST_ROUND_14_locust_report.html  DOCKER_DISK_TEST_ROUND_15_locust_logs.txt  DOCKER_DISK_TEST_ROUND_15_locust_report.html  DOCKER_DISK_TEST_ROUND_16_locust_logs.txt  DOCKER_DISK_TEST_ROUND_16_locust_report.html  DOCKER_DISK_TEST_ROUND_17_locust_logs.txt  DOCKER_DISK_TEST_ROUND_17_locust_report.html  DOCKER_DISK_TEST_ROUND_1_locust_report.html  DOCKER_DISK_TEST_ROUND_2_locust_report.html  DOCKER_DISK_TEST_ROUND_3_locust_logs.txt  DOCKER_DISK_TEST_ROUND_4_locust_logs.txt  DOCKER_DISK_TEST_ROUND_4_locust_report.html  DOCKER_DISK_TEST_ROUND_5_locust_logs.txt  DOCKER_DISK_TEST_ROUND_5_locust_report.html  DOCKER_DISK_TEST_ROUND_6_locust_logs.txt  DOCKER_DISK_TEST_ROUND_6_locust_report.html  DOCKER_DISK_TEST_ROUND_7_locust_logs.txt  DOCKER_DISK_TEST_ROUND_7_locust_report.html  DOCKER_DISK_TEST_ROUND_8_locust_logs.txt  DOCKER_DISK_TEST_ROUND_8_locust_report.html  (+47 more)
app/: common.py  lambda.py  lambda_docker.py
