[tool.poetry]
name = "serverless-ml-deployments"
version = "0.1.0"
description = "Docker + Lambda + Zappa"
authors = ["Ian Whitestone"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
zappa = "^0.53.0"
troposphere = "2.7.0"
pandas = "^1.2.3"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.12"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
